# smart_tetris

./: .gitmodules  CMakeLists.txt  find_packages.cmake
libs/core/: CMakeLists.txt  tetris_core.h  tetris_shape.h
libs/core/details/: tetris_core.cpp  tetris_shape.cpp
libtetriscore/: tetris_core.cpp  tetris_core.h  tetris_shape.cpp  tetris_shape.h
src/console/: CMakeLists.txt  main.cpp
src/console/details/: console_tetris.cpp
tests/: CMakeLists.txt  ut_core_test.cpp  ut_shape_test.cpp
tests/core_tests/: core_test.cpp  shape_test.cpp
tetrisgui/consoletetris/: console_tetris.cpp  console_tetris.h  main.cpp  tetris_window.cpp  tetris_window.h
